--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "enzyme-adapter-react-16": "^1.5.0",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
+    "react-dropzone": "^5.1.0",
     "react-scripts": "1.1.5",
     "react-test-renderer": "^16.5.1",
     "semantic-ui-css": "^2.3.3",
